# kiro2api

./: .gitignore  CLAUDE.md  pyproject.toml
.kiro/specs/anthropic-api-support/: design.md  requirements.md
src/: cli.py
src/kiro2api/: __init__.py  app.py  cli.py  my_script.py
