[build-system]
requires = ["setuptools>=80.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kiro2api"
version = "1.0.0"
description = "OpenAI-compatible API for Claude Sonnet 4 via AWS CodeWhisperer"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.7",
    "json_repair>=0.49.0"
]

[project.scripts]
ki2 = "src.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
